grafana/grafana-service.yaml
<<<<<<< Updated upstream
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: #namespace_name#
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  type: NodePort  
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32309
=======
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: #namespace_name#
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32309
>>>>>>> Stashed changes
